# bank-skills

./: .gitignore  LICENSE  MCP_INSTALLATION.md  PUBLISHING.md  README.md  TEMPLATE.md  pyproject.toml
.github/workflows/: publish.yml
mcp-extension/: manifest.json  pyproject.toml
mcp-extension/server/: server.py  sweeper.py
publish/: build_bundle.py  publish_clawhub.sh  publish_npm.sh
scripts/: build-clawhub-package.sh  build-mcpb.sh  sync-skill-code.sh
skills/bank-skill/: SKILL.md  pyproject.toml  skill.json
skills/example-skill/: SKILL.md  run.sh  skill.json
skills/example-skill/examples/: input.json  output.json
src/bankskills/cli/: app.py
src/bankskills/mcp/: __init__.py  server.py
src/bankskills/publishing/: __init__.py  builder.py
src/bankskills/web/: app.py
src/skillshop/cli/: __init__.py  app.py
src/skillshop/mcp/: server.py
src/skillshop/publishing/: builder.py
tests/: test_01_skill_directory_structure.py  test_02_skill_md_contract.py  test_03_skill_json_metadata.py  test_04_examples_golden_io.py  test_05_credentials_env_vars.py  test_07_core_fetch_balances.py  test_08_core_fetch_account_details.py  test_09_core_send_money.py  test_10_insufficient_funds.py  test_11_runsh_balance_action.py  test_12_runsh_receive_details.py  test_13_runsh_send_action.py  test_14_cli_balance_command.py  test_15_cli_receive_details.py  test_16_cli_send_command.py  test_17_mcp_bank_tools.py  test_18_end_to_end_verification.py  test_19_mcp_sweeper_tools.py  test_20_v4_swap_integration.py  test_21_new_banking_tools.py  test_sweeper.py  test_wallet.py
(+30 files in other folders)
