[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-shop"
version = "0.1.0"
description = "A factory system for creating, testing, and publishing AI agent skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.9.0",
    "textual>=0.60.0",
    "textual-web>=0.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skillshop"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
